--- a/demo/index.html
+++ b/demo/index.html
@@ -54,6 +54,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-8 col-md-12 col-sm-12">
             <h1 class="helvetica gray">Highwind</h1>
+            <a href="#" class="btn btn-primary">Click moi</a>
             <p class="serif gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
             <p class="serif gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
@@ -327,10 +328,15 @@
 $(function(){
   $('a').click(function(e){
     e.preventDefault();
-    var temp=$('#color-picker');
-    temp.attr('value', $(this).text());
-    temp.select();
+    var $temp=$('<input>');
+    $('body').append($temp);
+    $temp.val($(this).text()).select();
     document.execCommand('copy');
+    $temp.remove();
+    // var temp=$('#color-picker');
+    // temp.attr('value', $(this).text());
+    // temp.select();
+    // document.execCommand('copy');
   })
 })
 
