--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>RS DEMOS</title>
-    <link rel="stylesheet" href="../css/bootstrap4.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/rs.css">
     <link rel="stylesheet" href="../css/rs.color.css">
 
@@ -50,14 +50,58 @@
         </div>
       </div>
 
-      <main class="w80 mauto py-5">
+      <main class="w80 ss-w95 ms-w95 mauto py-5">
         <div class="row">
           <div class="col-lg-8 col-md-8 col-md-12 col-sm-12">
-            <h1 class="helvetica gray">Highwind</h1>
-            <a href="#" class="btn btn-primary">Click moi</a>
-            <p class="serif gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h1 class="helvetica gray">What is <span class="inline-block py-1 px-2 br1 bg-azure white">rs</span></h1>
 
-            <p class="serif gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+            <p class="serif gray">#rs is tiny css library, that can be associate with others css library like bootsrap to build a website very fast. its features are:
+*you can set margin from 1 to 100 in pexel and pourcentage, you can set pading from 1 to 100 in pexel and pourcentage, you can set width and height from 1 to 100
+
+pourcentage, you can set height from 1 to 500 pexels, you can set width and height depending on screen size, you can set font-size from 0em to 6em, you can set text
+
+styling, you can set border radius, you can set image style, you can float an element, you can choose a cursor, you can choose color, background-color, buton color.
+you can use boostrap color and call rs color library.</p>
+
+            <p class="serif gray">### License
+
+```
+MIT License
+
+Copyright (c) 2019 Tom Hikari <tomprescott1565@gmail.com>
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this
+
+software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify,
+
+merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following
+
+conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS
+
+IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND
+
+NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
+
+OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+```
+
+[Oncebot](https://oncebot.com)
+</p>
 
             <h2 class="helvetica gray">Color Picker</h2>
 
